[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A cat(1) clone with wings."
homepage = "https://github.com/sharkdp/bat"
license = "MIT/Apache-2.0"
name = "bat"
repository = "https://github.com/sharkdp/bat"
version = "0.21.0"
exclude = ["assets/syntaxes/*", "assets/themes/*"]
build = "build.rs"
edition = '2018'

[features]
default = ["application"]
# Feature required for bat the application. Should be disabled when depending on
# bat as a library.
application = [
    "bugreport",
    "build-assets",
    "git",
    "minimal-application",
]
# Mainly for developers that want to iterate quickly
# Be aware that the included features might change in the future
minimal-application = [
    "atty",
    "clap",
    "dirs-next",
    "paging",
    "regex-onig",
    "wild",
]
git = ["bat-impl/git"] # Support indicating git modifications
paging = ["bat-impl/paging", "shell-words", "grep-cli"] # Support applying a pager on the output
build-assets = ["bat-impl/build-assets"]

# You need to use one of these if you depend on bat as a library:
regex-onig = ["bat-impl/regex-onig"] # Use the "oniguruma" regex engine
regex-fancy = ["bat-impl/regex-fancy"] # Use the rust-only "fancy-regex" engine

[dependencies]
atty = { version = "0.2.14", optional = true }
ansi_term = "^0.12.1"
console = "0.15.0"
once_cell = "1.12"
wild = { version = "2.0", optional = true }
shell-words = { version = "1.1.0", optional = true }
globset = "0.4"
bugreport = { version = "0.5.0", optional = true }
dirs-next = { version = "2.0.0", optional = true }
grep-cli = { version = "0.1.6", optional = true }

[dependencies.'bat-impl']
path = "bat-impl"
version = "0.0.21"

[dependencies.clap]
version = "2.34"
optional = true
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
assert_cmd = "2.0.4"
serial_test = "0.6.0"
predicates = "2.1.1"
wait-timeout = "0.2.0"
tempfile = "3.3.0"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.24.1", default-features = false, features = ["term"] }

[build-dependencies]
clap = { version = "2.34", optional = true }

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [".", "bat-impl"]
